--- a/Web/inhtml/login.html
+++ b/Web/inhtml/login.html
@@ -45,7 +45,7 @@
     </div>
     <script type="text/javascript">
         $(function () {
-            $("#a_reg").click(function () { $("#Modal_Reg").modal('show') });
+            $("#a_reg").click(function () { $("#Modal_Reg").modal('show'); });
             function login() {
                 var inputEmail = $("#login_email").val();
                 var inputPwd = $("#login_pwd").val();
