--- a/Web/inhtml/orders.html
+++ b/Web/inhtml/orders.html
@@ -5,12 +5,17 @@
         <h3>订单</h3>
       </div>
       <div class="modal-body" style="height:500px;max-height:500px;">
-          <iframe border="0" style="height:460px;border:0px;" width="100%" src="/orders.aspx"></iframe>
+          <iframe id="iframe_orders" border="0" style="height:460px;border:0px;display:none;" width="100%" src=""></iframe>
+          <iframe id="iframe_Loading" border="0" style="height:460px;border:0px;" width="100%" src="/loading.html"></iframe>
       </div>
     </div>
     <script type="text/javascript">
         $(function () {
-            $("a[ref='myorder']").click(function () { $("#Modal_Orders").modal('show'); return false; });
+            $("a[ref='myorder']").click(function () { Loading("show"); $("#iframe_orders").attr("src", "/orders.aspx"); $("#Modal_Orders").modal('show'); return false; });
         });
+        function Loading(action) {
+            if (action == "show") $("#iframe_Loading").show().prev().hide();
+            if (action == "hide") $("#iframe_Loading").hide().prev().show();
+        }
     </script>
-    <%} %>
+<%} %>
