--- a/Web/inhtml/upimages.html
+++ b/Web/inhtml/upimages.html
@@ -30,11 +30,8 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li><a href="javascript:;">输入文字：</a></li>
+            <li><a href="javascript:;">请上传照片，选择您喜欢的角度和大小</a></li>
         </ul>
-        <form class="navbar-form pull-left">
-            <input type="text" class="span2">
-        </form>
         <form class="navbar-form pull-right">
             <div class="fileupdiv">
                 <button type="submit" class="btn" id="uploadify"><i class="icon-upload"></i>上传照片</button>
