--- a/Web/inhtml/choosestore.html
+++ b/Web/inhtml/choosestore.html
@@ -1,4 +1,5 @@
 ﻿<% if(IsChooseStore() == false){%>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.4"></script>
 <div class="jumbotron">
     <h3>选择店面</h3><small>在上传图片之前，请先确定店面</small>
     <div id="allmap" style="width:100%;height:400px;"></div>
