--- a/Web/inhtml/orderinfo.html
+++ b/Web/inhtml/orderinfo.html
@@ -1,8 +1,4 @@
 ﻿<% if(IsLogin()){%>
-<div class="alert">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong>提醒!</strong>今日还可以使用3张免费照片纸
-</div>
 <table class="table table-striped table-bordered">
   <tbody>
       <tr><td colspan="2" style="text-align:center;"><h2>订单编号：<%= Model.OrderNo %></h2></td></tr>
@@ -11,10 +7,10 @@
       <tr><td>取件人地址：<%= Model.Address %></td></tr>
       <tr><td>打印纸：<%= GetPrintType(Model.PrintType) %></td></tr>
       <tr><td>打印份数：<%= Model.PrintNum %></td></tr>
-      <tr><td rowspan="4" style="text-align:center;"><em>在线支付</em></td><td>免费打印：<%= Model.Person %></td></tr>
-      <tr><td>需付费：<%= Model.Person %></td></tr>
-      <tr><td>单张价钱：<%= Model.Person %></td></tr>
-      <tr><td>合计：<%= Model.Person %></td></tr>
+      <tr><td rowspan="4" style="text-align:center;"><em>在线支付</em></td><td>免费打印：<%= Model.FreeCount %></td></tr>
+      <tr><td>需付费：<%= Model.PayCount %></td></tr>
+      <tr><td>单张价钱：<%= Model.Price %></td></tr>
+      <tr><td>合计：<%= Model.Total_fee %></td></tr>
   </tbody>
 </table>
 <form class="form-horizontal">
