--- a/Web/inhtml/login.html
+++ b/Web/inhtml/login.html
@@ -40,7 +40,7 @@
                 </div>
                 </form>
             </div>
-            <div class="tab-pane active" id="getpwd_tab">
+            <div class="tab-pane" id="getpwd_tab">
                 <form class="bs-docs-example form-horizontal">
                 <div class="control-group">
                     <label class="control-label" for="get_email">邮箱：</label>
