--- a/Web/inhtml/meta.html
+++ b/Web/inhtml/meta.html
@@ -1,6 +1,6 @@
 ﻿<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap.css" rel="stylesheet">
 <style type="text/css">
     html,body
     {
