--- a/Web/inhtml/memo.html
+++ b/Web/inhtml/memo.html
@@ -1,4 +1,4 @@
-﻿<hr>
+﻿<!--<hr>
 <div class="row-fluid marketing">
     <div class="span6">
         <h4>每日免费</h4>
@@ -21,4 +21,4 @@
         <h4>杭州本地</h4>
         <p>杭州本地杭州本地杭州本地杭州本地杭州本地杭州本地杭州本地杭州本地杭州本地</p>
     </div>
-</div>
+</div>-->
