--- a/Web/inhtml/meta.html
+++ b/Web/inhtml/meta.html
@@ -11,7 +11,7 @@
     }
     .container-narrow
     {
-        margin: 0 auto -60px;
+        margin: 0 auto;
         max-width: 960px;
         min-height: 100%;
         height: auto !important;
