--- a/Web/inhtml/choosestore.html
+++ b/Web/inhtml/choosestore.html
@@ -1,7 +1,7 @@
 ﻿<% if(IsChooseStore() == false){%>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.4"></script>
 <div class="jumbotron">
-    <h3>选择店面</h3><small>在上传图片之前，请先确定店面</small>
+    <h3>选择您希望取件的店面</h3><small>在上传文件之前，请先确定店面</small>
     <div id="allmap" style="width:100%;height:400px;"></div>
     <br />
     <a class="btn btn-large btn-primary" href="javascript:;" id="btn_Choose">确定选择</a>
