--- a/Web/inhtml/login.html
+++ b/Web/inhtml/login.html
@@ -1,4 +1,4 @@
-﻿<% if(IsLogin() == false && IsChooseStore() == true){%>
+﻿<% if(IsLogin() == false){%>
     <div id="Modal_Reg" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -70,7 +70,8 @@
             Msg.Hide = function (input) {
                 input.parents(".control-group").removeClass("error").find(".help-block").html("");
             }
-            $("#a_reg").click(function () { $("#Modal_Reg").modal('show'); });
+
+			$("#a_reg").click(function () { $("#Modal_Reg").modal('show'); });
             function login() {
                 if (kcly.Validate.validate($("#login_email,#login_pwd"), Msg.Show, Msg.Hide)) {
                     $("#btn_reg").button('loading');
@@ -115,7 +116,7 @@
             $("#login_email").addVerify("notnull", null, "请输入邮箱").addVerify("test", "IsEmail", "请输入正确的邮箱格式");
             $("#login_pwd").addVerify("notnull", null, "请输入密码").addVerify("checklength", { min: 6, max: 20 }, "密码长度为6-20");
             $("#get_email").addVerify("notnull", null, "请输入邮箱").addVerify("test", "IsEmail", "请输入正确的邮箱格式");
-            alert("登录/注册后才能正常下单"); $("#a_reg").click();
+            <% if(IsChooseStore() == true){%>alert("登录/注册后才能正常下单"); $("#a_reg").click();<%}%>
         });
     </script>
     <%} %>
